--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         form.addEventListener('submit', function(e) {
             e.preventDefault();
             if (input.value) {
-                socket.emit('msg', input.value);
+                socket.emit('event', input.value);
                 input.value = '';
             }
         });
 
-        socket.on('msg', function(msg) {
+        socket.on('event', function(msg) {
             var item = document.createElement('li');
             item.textContent = msg;
             messages.appendChild(item);
