--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <script>
-        var socket = io("http://192.168.1.35:7000");
+        var socket = io("https://chat-eagle.herokuapp.com:7000");
 
         var messages = document.getElementById('messages');
         var form = document.getElementById('form');
