--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <script>
-        var socket = io("https://localhost");
+        var socket = io("http://localhost:3000/");
 
         var messages = document.getElementById('messages');
         var form = document.getElementById('form');
