--- a/index.html
+++ b/index.html
@@ -90,6 +90,29 @@
             window.scrollTo(0, document.body.scrollHeight);
         });
     </script>
+
+<script>
+    var socket = io("https://localhost:4000/");
+
+    var messages = document.getElementById('messages');
+    var form = document.getElementById('form');
+    var input = document.getElementById('input');
+
+    form.addEventListener('submit', function(e) {
+        e.preventDefault();
+        if (input.value) {
+            socket.emit('event', input.value);
+            input.value = '';
+        }
+    });
+
+    socket.on('event', function(msg) {
+        var item = document.createElement('li');
+        item.textContent = msg;
+        messages.appendChild(item);
+        window.scrollTo(0, document.body.scrollHeight);
+    });
+</script>
 </body>
 
 </html>
